# backend

./: .env.sample  Dockerfile  README.md  main.py  pyproject.toml
src/: main.py
src/api/: control_panel.py  submit_result.py  workers.py
src/models/: db.py  order_model.py  thing_model.py  user_model.py
src/utils/: celery.py
src/workers/: workers.py
src/workers/worker_handlers/: handle_create_order.py  handle_delivery.py  handle_inventory.py  handle_payment.py
