[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["thanawinboon <pokepat27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
celery = "^5.3.6"
sqlmodel = "^0.0.12"
psycopg2 = "^2.9.9"
redis = "^5.0.1"
opentelemetry-distro = "0.40b0"
opentelemetry-instrumentation-fastapi = "0.40b0"
opentelemetry-instrumentation-logging = "0.40b0"
opentelemetry-exporter-otlp = "1.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
