[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["thanawinboon <pokepat27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
celery = "^5.3.6"
sqlmodel = "^0.0.12"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
logging = "^0.4.9.6"
opentelemetry-distro = "0.38b0"
opentelemetry-exporter-otlp = "1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
